# mico

./: .gitignore  Doxyfile  Makefile.am  README.md  bitbucket-pipelines.yml  configure.ac  get_mvn_platform_version.txt  pom.xml
api/c++/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am  configure.ac  logging.h  sparqlToC.sh
api/c++/amqp/: CMakeLists.txt  Makefile.am  amqpcpp.h  array.cpp  basicackframe.h  basiccancelframe.h  basiccancelokframe.h  basicconsumeframe.h  basicconsumeokframe.h  basicdeliverframe.h  basicframe.h  basicgetemptyframe.h  basicgetframe.h  basicgetokframe.h  basicheaderframe.h  basicnackframe.h  basicpublishframe.h  basicqosframe.h  basicqosokframe.h  basicrecoverasyncframe.h  basicrecoverframe.h  basicrecoverokframe.h  basicrejectframe.h  basicreturnframe.h  bodyframe.h  channelcloseframe.h  channelcloseokframe.h  channelflowframe.h  channelflowokframe.h  channelframe.h  channelimpl.cpp  channelopenframe.h  channelopenokframe.h  connectioncloseframe.h  connectioncloseokframe.h  connectionframe.h  connectionimpl.cpp  connectionopenframe.h  connectionopenokframe.h  connectionsecureframe.h  (+54 more)
api/c++/amqp/amqpcpp/: array.h  booleanset.h  buffer.h  bytebuffer.h  callbacks.h  channel.h  channelimpl.h  classes.h  connection.h  connectionhandler.h  connectionimpl.h  decimalfield.h  deferred.h  deferredcancel.h  deferredconsumer.h  deferreddelete.h  deferredget.h  deferredqueue.h  endian.h  entityimpl.h  envelope.h  exchangetype.h  field.h  fieldproxy.h  flags.h  login.h  message.h  metadata.h  monitor.h  numericfield.h  outbuffer.h  receivedframe.h  stringfield.h  table.h  watchable.h
api/c++/commons/: CMakeLists.txt  FileOperations.cpp  FileOperations.h  TimeInfo.h
api/c++/daemon/: CMakeLists.txt  Daemon.cpp  Daemon.hpp
api/c++/debian/: README  changelog  control  copyright  libmico-api-dev.doc-base  libmico-api-dev.install  libmico-api2.install  libmico-api2.links.in  libmico-api2.postinst  libmico-api2.postrm  libmico-api2.preinst  libmico-api3.preinst  mico-service-ocr.install  rules
api/c++/event/: AnalysisService.hpp  CMakeLists.txt  Event.pb.cc  Event.pb.h  EventManager.cpp  EventManager.hpp  Makefile.am
api/c++/logging/: CMakeLists.txt  Logging.cpp  Logging.hpp
api/c++/modules/: FindAMQPCPP.cmake  FindHDFS.cmake  FindLibDaemon.cmake  FindLibMagic.cmake  FindTESSERACT.cmake
api/c++/persistence/: Asset.hpp  AssetAnno4cpp.hpp  CMakeLists.txt  Content.cpp  Content.hpp  ContentItem.cpp  ContentItem.hpp  DublinCore.hpp  FileStream.cpp  FileStream.hpp  HDFSStream.cpp  HDFSStream.hpp  Item.hpp  ItemAnno4cpp.cpp  ItemAnno4cpp.hpp  JnippExceptionHandling.hpp  JnippExcpetionHandling.hpp  Makefile.am  Metadata.cpp  Metadata.hpp  Part.hpp  PartAnno4cpp.cpp  PartAnno4cpp.hpp  PersistenceService.cpp  PersistenceService.hpp  Resource.hpp  ResourceAnno4cpp.cpp  ResourceAnno4cpp.hpp  SPARQLUtil.cpp  SPARQLUtil.hpp  URLStream.cpp  URLStream.hpp  Uri.cpp  Uri.hpp  WebStream.cpp  WebStream.hpp
api/c++/rdf/: CMakeLists.txt  Makefile.am  http_client.cpp  http_client.hpp  rdf_model.cpp  rdf_model.hpp  rdf_query.hpp  rdf_query_bool.cpp  rdf_query_tuple.cpp  sparql_client.cpp  sparql_client.hpp  vocabularies.hpp
api/c++/samples/: CMakeLists.txt  Makefile.am  mico_ocr_service.cpp  ocrRegistrationSample.xml
api/c++/test/: CMakeLists.txt  Makefile.am  bnode_tests.cpp  content_item_tests.cpp  event_manager_tests.cpp  gtest.h  http_client_tests.cpp  http_request_tests.cpp  literal_tests.cpp  metadata_tests.cpp  persistence_service_tests.cpp  rdf_tests.cpp  sparql_client_tests.cpp  sparql_parse_tests.cpp  uri_tests.cpp  urlstream_tests.cpp  uuid_tests.cpp
api/c++/tools/: CMakeLists.txt  Makefile.am  mico_inject  mico_inject.cpp
api/java/: pom.xml
base/debian/: changelog  control  (+3 more)
broker/: changelog.md  pom.xml  update_broker_on_vm.sh
configuration/: Dockerfile
docker/: README.md
event/: pom.xml
m4/: libcurl.m4
marmotta/: pom.xml
parent/: pom.xml
persistence/: Makefile.am  env.sh  pom.xml  prepare-hadoop.sh  start-hdfs.sh
persistence/src/main/c++/: Content.cpp  Content.hpp  ContentItem.cpp  ContentItem.hpp  HDFSStream.cpp  HDFSStream.hpp  Metadata.cpp  Metadata.hpp  PersistenceService.cpp  PersistenceService.hpp  SPARQLUtil.hpp  URLStream.cpp  URLStream.hpp  http_client.cpp  http_client.hpp  marmotta_client.hpp
persistence/src/main/java/eu/mico/platform/persistence/api/: PersistenceService.java
persistence/src/main/java/eu/mico/platform/persistence/impl/: ContextualMarmottaContent.java  ContextualMarmottaContentItem.java  ContextualMarmottaMetadata.java  MarmottaContent.java  MarmottaContentItem.java  MarmottaMetadata.java  PersistenceServiceImpl.java
persistence/src/main/java/eu/mico/platform/persistence/model/: Content.java  ContentItem.java  ContentPart.java  Metadata.java
persistence/src/main/java/eu/mico/platform/persistence/util/: SPARQLUtil.java
persistence/src/main/resources/: hadoop-hdfs-site.xml
persistence/src/main/resources/sparql/: askContentItem.sparql  askContentPart.sparql  createContentPart.sparql  deleteGraph.sparql  listContentItems.sparql
persistence/src/test/c++/: content_item_tests.cpp  http_client_tests.cpp  http_request_tests.cpp  metadata_tests.cpp  persistence_service_tests.cpp  urlstream_tests.cpp
persistence/src/test/java/eu/mico/platform/persistence/test/: BaseMarmottaTest.java  ContextualMarmottaContentItemTest.java  ContextualMarmottaMetadataTest.java  MarmottaContentItemTest.java  PersistenceServiceTest.java
platform/: pom.xml
platform-config-webapp/: README.md  README.txt  pom.xml
rabbitmq-comp/: README.md  pom.xml
rdf/: Makefile.am
rdf/src/main/c++/: http_client.cpp  http_client.hpp  rdf_model.cpp  rdf_model.hpp  rdf_query.cpp  rdf_query.hpp  rdf_query_bool.cpp  rdf_query_tuple.cpp  sparql_client.cpp
rdf/src/test/c++/: .#bnode_test.cpp  bnode_tests.cpp  http_client_tests.cpp  http_request_tests.cpp  literal_tests.cpp  sparql_client_tests.cpp  sparql_parse_tests.cpp  uri_tests.cpp
showcase-webapp/: API-Description.md  pom.xml
storage/: pom.xml
workflow-creation-webapp/: pom.xml
(+683 files in other folders)
